--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.0",
+    "@types/node": "^24.8.1",
     "axios": "^1.12.2",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
